# AdventOfCode

./: .gitignore  README.md  requirements.txt
2020/python/: AOC.py  collect_ans.py  run_all.py
2020/python/Day01/: Part1.py  Part2.py
2020/python/Day02/: Part1.py  Part2.py
2020/python/Day03/: Part1.py  Part2.py
2020/python/Day04/: Part1.py  Part2.py
2020/python/Day05/: Part1.py  Part2.py
2020/python/Day06/: Part1.py  Part2.py
2020/python/Day07/: Part1.py  Part2.py
2023/C/: Part1.c  setup.bat
2023/C/Day01/: Part1.c  Part2.c
2023/C/Day02/: Part1.c  Part2.c
2023/C/Day03/: Part1.c  Part2.c
2023/C/Day04/: Part1.c  Part2.c
2023/C/Day05/: Part1.c  Part2.c
2023/C/Day06/: Part1.c  Part2.c
2023/C/Day07/: Part1.c  Part2.c
2023/C/Day08/: Part1.c  Part2.c
2023/C/Day09/: Part1.c  Part2.c
2023/C/Day10/: Part1.c  Part2.c
2023/C/Day11/: CMakeLists.txt  Part1.c  Part2.c
2023/C/Day12/: Part1.c  Part2.c
2023/C/Day13/: Part1.c  Part2.c
2023/C/Day14/: Part1.c  Part2.c
2023/C/Day15/: Part1.c  Part2.c
2023/C/Day16/: CMakeLists.txt  Part1.c  Part2.c  Part2V2.c  Part2V3.c
2023/C/Day17/: Part1.c  Part2.c
2023/C/Day18/: Part1.c  Part2.c
2023/C/Day19/: CMakeLists.txt  Part1.c  Part2.c  snakey.c
2023/C/Day20/: Part1.c  Part2.c
2023/C/Day21/: Part1.c  Part2.c  (+1 more)
2023/python/: AOC.py
2024/c/: AOC.py  template.c
2024/python/: AOC.py  collect_ans.py  run_all.py  template.py
2024/rust/: AOC.py
2025/c/: AOC.py  template.c
2025/c/Day02/: CMakeLists.txt  Part1.c  Part2.c
2025/python/: AOC.py  template.py
2025/rust/: AOC.py  template.rs
(+275 files in other folders)
